get products implemented
